2007-04-23  Per Bothner  <per@bothner.com>

	* XQParser.java (parse): Use new method of iterating through
	ModuleManager modules.

2007-02-17  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkReferenceExp): Call NameLookup.lookup
	with correct namespace code.

2007-02-16  Per Bothner  <per@bothner.com>

	* XQParser.java: Add missing intern for default namespace uri.

2007-01-19  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkStatements, resolveModule): Remove
	pointless no-longer-erv-true isNamespaceDecl invocations.

2007-01-17  Per Bothner  <per@bothner.com>

	* XQParser.java (parseTypeSwitch): Fix parsing of default case
	with variable declaration.

	* XQParser.java (parsePathExpr): Use new rootDocument node for '/'
	non-infix operator to coerce to document-node.

	* XQParser.java (baseURI): Change type to Path.
	(setStaticBaseUri, fixupStaticBaseUri): New methods.
	(getStaticBaseUri): Try Environment, then LineBufferedReader,
	then currentPath.  Then coerce to an absolute URI.
	(resolveAgainstBaseUri): Making absolute is no longer done here.

	* XQuery.java (typeMap): use new XDataType.anyAtomicType.
	* XQParser.java (parseItemType): Explicitly test
	for XDataType.anyAtomicType, which is now different from item().
	Use SingletonType.getInstance(); for item().

	* XQuery.java (initXQuery): Change implementation class of node-name.

	* XQParser.java (resolveAgainstBaseUri): New method.
	(parse): Use it to resolve 'default collation'.
	(parseFLWRExpression): Use it to resolve 'order by' collation.

	* XQParser.java (parseStepExpr): IF step is 'attribute(....)'
	then default axis is AXIS_ATTRIBUTE.

2007-01-16  Per Bothner  <per@bothner.com>

	* XQuery.java (getTypeFor): Map java.lang.String to stringStringType.

	* XQuery.java (formatType): New method.

	* XQParser.java (parseRelativePathExpr): Type dot type to node.

2007-01-15  Per Bothner  <per@bothner.com>

	* XQParser.java (parseContent): Make sure we don't skip boundary-space